# multy_chat

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-signed.yml  build.yml
public/: models.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  knowledge.rs  license.rs  mod.rs  settings.rs  speech.rs
src-tauri/src/db/: mod.rs
src-tauri/src/providers/: anthropic.rs  deepseek.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/rag/: mod.rs
src/components/chat/: ChatWindow.tsx  InputArea.tsx  KnowledgeSelector.tsx  MessageBubble.tsx  ModelSelector.tsx
src/components/knowledge/: KnowledgeSidebar.tsx
src/components/layout/: Sidebar.tsx
src/components/preview/: CodePreview.tsx  HtmlPreview.tsx  MarkdownRenderer.tsx  MermaidPreview.tsx
src/components/settings/: SettingsDialog.tsx
src/components/ui/: Button.tsx  Input.tsx  ScrollArea.tsx  Toaster.tsx
src/lib/: utils.ts
src/services/: modelsService.ts
src/stores/: appStore.ts  chatStore.ts  knowledgeStore.ts  licenseStore.ts  modelsStore.ts  settingsStore.ts
